Added Buzzer Module

--- a/Dio/Dio/Debug/Makefile
+++ b/Dio/Dio/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../Buzzer.c \
 ../Dio.c \
 ../Led.c \
 ../main.c \
@@ -50,24 +51,28 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+Buzzer.o \
 Dio.o \
 Led.o \
 main.o \
 Sw.o
 
 OBJS_AS_ARGS +=  \
+Buzzer.o \
 Dio.o \
 Led.o \
 main.o \
 Sw.o
 
 C_DEPS +=  \
+Buzzer.d \
 Dio.d \
 Led.d \
 main.d \
 Sw.d
 
 C_DEPS_AS_ARGS +=  \
+Buzzer.d \
 Dio.d \
 Led.d \
 main.d \
@@ -87,6 +92,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./Buzzer.o: .././Buzzer.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./Dio.o: .././Dio.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
