Added Relay Module

--- a/Dio/Dio/Debug/Makefile
+++ b/Dio/Dio/Debug/Makefile
@@ -41,6 +41,7 @@ C_SRCS +=  \
 ../Dio.c \
 ../Led.c \
 ../main.c \
+../Relay.c \
 ../Sw.c
 
 
@@ -55,6 +56,7 @@ Buzzer.o \
 Dio.o \
 Led.o \
 main.o \
+Relay.o \
 Sw.o
 
 OBJS_AS_ARGS +=  \
@@ -62,6 +64,7 @@ Buzzer.o \
 Dio.o \
 Led.o \
 main.o \
+Relay.o \
 Sw.o
 
 C_DEPS +=  \
@@ -69,6 +72,7 @@ Buzzer.d \
 Dio.d \
 Led.d \
 main.d \
+Relay.d \
 Sw.d
 
 C_DEPS_AS_ARGS +=  \
@@ -76,6 +80,7 @@ Buzzer.d \
 Dio.d \
 Led.d \
 main.d \
+Relay.d \
 Sw.d
 
 OUTPUT_FILE_PATH +=Dio.elf
@@ -114,6 +119,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./Relay.o: .././Relay.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
